feat: 익절 손절 기능 추가
1. 익절 손절 기능 추가
2. 보조지표 성능 개선 작업